# tmplr

./: LICENSE  MANIFEST.in  Makefile  README.md  dev-requirements.txt  pyproject.toml  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
tests/: __init__.py  temple.py
tests/temples/: example
tmplr/: __init__.py  temple.py
tmplr/cli/: __init__.py  editor.py  temples.py  tmplr.py
tmplr_cli/: __init__.py  __main__.py  app.py  editor.py  temples_app.py  tmplr_app.py
