[project]
name = "tmplr"
description = "The holiest cli template system"
readme = "README.md"
requires-python = ">=3"
license = { file = "LICENSE" }
authors = [
    { name = "D. Ben Knoble", email = "ben.knoble@gmail.com" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Environment :: Console",
    "Topic :: Software Development :: Code Generators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3"
]
dynamic = ['version']

[project.urls]
GitHub = "https://github.com/benknoble/tmplr"

[project.scripts]
tmplr = "tmplr.cli.tmplr:main"
temples = "tmplr.cli.temples:main"

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.sdist]
include = [
    "tests/temples/example"
]
